# SEAME-ADS-Autonomous-lane-detection-24-25

./: .gitignore  .gitmodules  CameraNode_8cpp.html  CameraNode_8hpp.html  CameraNode_8hpp_source.html  Doxyfile  ImageProcessor_8hpp_source.html  ImagePublisherNode_8cpp.html  ImagePublisherNode_8hpp.html  ImagePublisherNode_8hpp_source.html  KalmanFilter_8cpp.html  KalmanFilter_8hpp.html  KalmanFilter_8hpp_source.html  LaneBuffer_8cpp.html  LaneBuffer_8hpp.html  LaneBuffer_8hpp_source.html  LaneVisualizationNode_8cpp.html  LaneVisualizationNode_8hpp.html  LaneVisualizationNode_8hpp_source.html  Logger_8hpp_source.html  MlVisionNode_8hpp_source.html  MotionControlNode_8cpp.html  MotionControlNode_8hpp.html  MotionControlNode_8hpp_source.html  PIDController_8cpp.html  PIDController_8hpp.html  PIDController_8hpp_source.html  PolyFit_8cpp.html  PolyFit_8hpp.html  PolyFit_8hpp_source.html  README.md  README_8md.html  VisionNode_8cpp.html  VisionNode_8hpp.html  VisionNode_8hpp_source.html  annotated.html  camera_2src_2main_8cpp.html  classCameraNode-members.html  classCameraNode.html  classImageProcessor-members.html  (+88 more)
.cache/clangd/index/: VisionNode.cpp.35E73BCDBAD6418F.idx  main.cpp.6AD03ED69CCF8806.idx  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: Dockerfile  build.yml  build.yml.bak
docs/html/: CameraNode_8hpp_source.html  InferenceEngine_8hpp_source.html  LaneVisualizationNode_8hpp_source.html  MotionControlNode_8hpp_source.html  PIDController_8hpp_source.html  PolyFit_8hpp_source.html  README_8md_source.html  annotated.html  classCameraNode-members.html  classCameraNode.html  classCameraNode__coll__graph.md5  classCameraNode__inherit__graph.map  classCameraNode__inherit__graph.md5  classImagePublisherNode.html  classImagePublisherNode__coll__graph.md5  classImagePublisherNode__inherit__graph.md5  classLaneBufferTest-members.html  classLaneBufferTest__inherit__graph.map  classLaneBufferTest__inherit__graph.md5  classLaneVisualizationNode__inherit__graph.md5  classMlVisionNode__coll__graph.map  classMlVisionNode__inherit__graph.md5  classMotionControlNode.html  classMotionControlNode__inherit__graph.md5  classVisionNode-members.html  classVisionNode.html  classVisionNode__coll__graph.md5  classes.html  dir_10923d8647b1ee8fbf87220d8ff4ad27.html  dir_12d9952f051e9e2ddc4cbb9a56038319.html  dir_1cff224a1e6b03151a67ce0cdfef8695.html  dir_2dbfac84c4b60c14da37e83e75675ddd.html  dir_3eacade2ac7e43fa91e27086aef6c0b8.html  dir_3f40370f3cf41ce60e2d39e867217e32.html  dir_4d978fe3524bc0db24ad0adfe572f931.html  dir_77e373514721cf8ada23c39ab264b9eb.html  dir_7b8407deb2133b89c4eb0b63d1f7f184.html  dir_84652a2ed60c04970e5677a8bdd78adc.html  dir_c3c619b15eca31f37f7a7235ba6684be.html  dir_e7f0e8d43350ae33b04a199df1d15f2d.html  (+19 more)
docs/latex/: annotated.tex  classCameraNode.tex  classCameraNode__coll__graph.md5  classCameraNode__inherit__graph.md5  classImageProcessor.tex  classImagePublisherNode.tex  classImagePublisherNode__coll__graph.md5  classImagePublisherNode__inherit__graph.md5  classInferenceEngine.tex  classKalmanFilter.tex  classLaneBuffer.tex  classLaneBufferTest.tex  classLaneBufferTest__coll__graph.md5  classLaneBufferTest__inherit__graph.md5  classLaneVisualizationNode.tex  classLaneVisualizationNode__coll__graph.md5  classLaneVisualizationNode__inherit__graph.md5  classLogger.tex  classLogger__coll__graph.md5  classLogger__inherit__graph.md5  classMlVisionNode.tex  classMlVisionNode__coll__graph.md5  classMlVisionNode__inherit__graph.md5  classMotionControlNode.tex  classMotionControlNode__coll__graph.md5  classMotionControlNode__inherit__graph.md5  classPIDController.tex  classVisionNode.tex  classVisionNode__coll__graph.md5  classVisionNode__inherit__graph.md5  dir_10923d8647b1ee8fbf87220d8ff4ad27.tex  dir_12d9952f051e9e2ddc4cbb9a56038319.tex  dir_1cff224a1e6b03151a67ce0cdfef8695.tex  dir_2dbfac84c4b60c14da37e83e75675ddd.tex  dir_318e2838d35da01f1c6a423b0299d866.tex  dir_3eacade2ac7e43fa91e27086aef6c0b8.tex  dir_3f40370f3cf41ce60e2d39e867217e32.tex  dir_4d978fe3524bc0db24ad0adfe572f931.tex  dir_72f1939742e5cf9244038e7618566497.tex  dir_77e373514721cf8ada23c39ab264b9eb.tex  (+20 more)
lane_keeping_ws/: README.md
lane_keeping_ws/launch/: JetsonLaunch.py  bags_launch.py  image_pub_launch.py  ml_launch.py
lane_keeping_ws/src/classic_vision/: CMakeLists.txt  package.xml
lane_keeping_ws/src/classic_vision/includes/: VisionNode.hpp
lane_keeping_ws/src/classic_vision/src/: VisionNode.cpp  main.cpp
lane_keeping_ws/src/ml_vision/: CMakeLists.txt  package.xml  setup.cfg  setup.py
lane_keeping_ws/src/ml_vision/includes/: ImageProcessor.hpp  InferenceEngine.hpp  MlVisionNode.hpp
lane_keeping_ws/src/ml_vision/ml_vision/: main.py
lane_keeping_ws/src/ml_vision/src/: ImageProcessor.cpp  InferenceEngine.cpp  MlVisionNode.cpp  main.cpp
lane_keeping_ws/src/motion_control/: CMakeLists.txt  package.xml
lane_keeping_ws/src/motion_control/includes/: Intersection.hpp  KalmanFilter.hpp  LaneBuffer.hpp  MotionControlNode.hpp  PIDController.hpp  PolyFit.hpp  Quartic.hpp  Seperator.hpp
lane_keeping_ws/src/motion_control/src/: Intersection.cpp  KalmanFilter.cpp  LaneBuffer.cpp  MotionControlNode.cpp  PIDController.cpp  PolyFit.cpp  Quartic.cpp  Seperator.cpp  main.cpp  polycompare.py
lane_keeping_ws/src/motion_control/test/src/: LaneBufferTest.cpp
scripts/: cudaTest.py  imagePublisher.py  pyrightconfig.json
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+24 more)
src/classic_vision/: CMakeLists.txt  package.xml
src/image_pipeline/: CMakeLists.txt  package.xml
tests/: imagePublisher.py  pyrightconfig.json
tests/CameraTest/: CMakeLists.txt  main.cpp
(+54 files in other folders)
